--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.6",
     "scss": "^0.2.4",
